Added iOS onboarding setup
