# services/api/docs/swagger.json
@@ -303,6 +303,93 @@
                 }
             }
         },
+        "/customers/setup/ios": {
+            "post": {
+                "description": "Create Cisco Secure Client iOS certificate import and connection creation URIs using ocserv username/password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Create customer iOS setup links",
+                "parameters": [
+                    {
+                        "description": "customer username and password (same ocserv account).",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/customer.SummaryData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/customer.IOSSetupResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/request.ErrorResponse"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.TooManyRequests"
+                        }
+                    }
+                }
+            }
+        },
+        "/customers/setup/ios/certificate/{token}": {
+            "get": {
+                "description": "Download customer's PKCS#12 certificate using a short-lived iOS setup token",
+                "produces": [
+                    "application/x-pkcs12"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Download customer iOS setup certificate",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "iOS setup certificate token",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "user.p12",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/request.ErrorResponse"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.TooManyRequests"
+                        }
+                    }
+                }
+            }
+        },
         "/customers/summary": {
             "post": {
                 "description": "Customer summary account",
@@ -3321,6 +3408,41 @@
                 }
             }
         },
+        "customer.IOSSetupResponse": {
+            "type": "object",
+            "required": [
+                "certificate_import_uri",
+                "certificate_password",
+                "connection_create_uri",
+                "connection_name",
+                "expires_at",
+                "server_address",
+                "server_port"
+            ],
+            "properties": {
+                "certificate_import_uri": {
+                    "type": "string"
+                },
+                "certificate_password": {
+                    "type": "string"
+                },
+                "connection_create_uri": {
+                    "type": "string"
+                },
+                "connection_name": {
+                    "type": "string"
+                },
+                "expires_at": {
+                    "type": "string"
+                },
+                "server_address": {
+                    "type": "string"
+                },
+                "server_port": {
+                    "type": "integer"
+                }
+            }
+        },
         "customer.ModelCustomer": {
             "type": "object",
             "required": [
@@ -4051,7 +4173,7 @@
                     "type": "integer"
                 },
                 "traffic_size": {
-                    "description": "in GiB  \u003e\u003e x * 1024 ** 3",
+                    "description": "in bytes",
                     "type": "integer"
                 },
                 "traffic_type": {
@@ -4265,6 +4387,15 @@
                 },
                 "auto_delete_inactive_users": {
                     "type": "boolean"
+                },
+                "client_profile_connection_name": {
+                    "type": "string"
+                },
+                "client_profile_server_address": {
+                    "type": "string"
+                },
+                "client_profile_server_port": {
+                    "type": "integer"
                 },
                 "google_captcha_secret": {
                     "type": "string"
@@ -4796,6 +4927,15 @@
                 "auto_delete_inactive_users": {
                     "type": "boolean"
                 },
+                "client_profile_connection_name": {
+                    "type": "string"
+                },
+                "client_profile_server_address": {
+                    "type": "string"
+                },
+                "client_profile_server_port": {
+                    "type": "integer"
+                },
                 "google_captcha_secret_key": {
                     "type": "string"
                 },
@@ -4838,6 +4978,9 @@
             "type": "object",
             "required": [
                 "auto_delete_inactive_users",
+                "client_profile_connection_name",
+                "client_profile_server_address",
+                "client_profile_server_port",
                 "google_captcha_secret_key",
                 "google_captcha_site_key",
                 "keep_inactive_user_days"
@@ -4845,6 +4988,15 @@
             "properties": {
                 "auto_delete_inactive_users": {
                     "type": "boolean"
+                },
+                "client_profile_connection_name": {
+                    "type": "string"
+                },
+                "client_profile_server_address": {
+                    "type": "string"
+                },
+                "client_profile_server_port": {
+                    "type": "integer"
                 },
                 "google_captcha_secret_key": {
                     "type": "string"
@@ -4904,6 +5056,15 @@
             "properties": {
                 "auto_delete_inactive_users": {
                     "type": "boolean"
+                },
+                "client_profile_connection_name": {
+                    "type": "string"
+                },
+                "client_profile_server_address": {
+                    "type": "string"
+                },
+                "client_profile_server_port": {
+                    "type": "integer"
                 },
                 "google_captcha_secret_key": {
                     "type": "string"
