# services/api/internal/services/system/types.go
@@ -11,17 +11,23 @@ type GetSystemInitResponse struct {
 }
 
 type GetSystemResponse struct {
-	GoogleCaptchaSiteKey    string `json:"google_captcha_site_key" validate:"omitempty"`
-	GoogleCaptchaSecretKey  string `json:"google_captcha_secret_key" validate:"omitempty"`
-	AutoDeleteInactiveUsers bool   `json:"auto_delete_inactive_users" validate:"omitempty"`
-	KeepInactiveUserDays    int    `json:"keep_inactive_user_days" validate:"omitempty"`
+	GoogleCaptchaSiteKey        string `json:"google_captcha_site_key" validate:"omitempty"`
+	GoogleCaptchaSecretKey      string `json:"google_captcha_secret_key" validate:"omitempty"`
+	AutoDeleteInactiveUsers     bool   `json:"auto_delete_inactive_users" validate:"omitempty"`
+	KeepInactiveUserDays        int    `json:"keep_inactive_user_days" validate:"omitempty"`
+	ClientProfileServerAddress  string `json:"client_profile_server_address" validate:"omitempty"`
+	ClientProfileServerPort     int    `json:"client_profile_server_port" validate:"omitempty"`
+	ClientProfileConnectionName string `json:"client_profile_connection_name" validate:"omitempty"`
 }
 
 type PatchSystemUpdateData struct {
-	GoogleCaptchaSiteKey    *string `json:"google_captcha_site_key" validate:"required"`
-	GoogleCaptchaSecretKey  *string `json:"google_captcha_secret_key" validate:"required"`
-	AutoDeleteInactiveUsers *bool   `json:"auto_delete_inactive_users" validate:"required"`
-	KeepInactiveUserDays    *int    `json:"keep_inactive_user_days" validate:"required"`
+	GoogleCaptchaSiteKey        *string `json:"google_captcha_site_key" validate:"required"`
+	GoogleCaptchaSecretKey      *string `json:"google_captcha_secret_key" validate:"required"`
+	AutoDeleteInactiveUsers     *bool   `json:"auto_delete_inactive_users" validate:"required"`
+	KeepInactiveUserDays        *int    `json:"keep_inactive_user_days" validate:"required"`
+	ClientProfileServerAddress  *string `json:"client_profile_server_address" validate:"required"`
+	ClientProfileServerPort     *int    `json:"client_profile_server_port" validate:"required"`
+	ClientProfileConnectionName *string `json:"client_profile_connection_name" validate:"required"`
 }
 
 type LoginData struct {
@@ -57,12 +63,15 @@ type ChangeUserPasswordBySelf struct {
 }
 
 type SetupSystem struct {
-	Username                string `json:"username" validate:"required,min=2,max=16"`
-	Password                string `json:"password" validate:"required,min=4,max=16"`
-	GoogleCaptchaSiteKey    string `json:"google_captcha_site_key" validate:"omitempty"`
-	GoogleCaptchaSecretKey  string `json:"google_captcha_secret_key" validate:"omitempty"`
-	AutoDeleteInactiveUsers bool   `json:"auto_delete_inactive_users" validate:"omitempty"`
-	KeepInactiveUserDays    int    `json:"keep_inactive_user_days" validate:"omitempty"`
+	Username                    string `json:"username" validate:"required,min=2,max=16"`
+	Password                    string `json:"password" validate:"required,min=4,max=16"`
+	GoogleCaptchaSiteKey        string `json:"google_captcha_site_key" validate:"omitempty"`
+	GoogleCaptchaSecretKey      string `json:"google_captcha_secret_key" validate:"omitempty"`
+	AutoDeleteInactiveUsers     bool   `json:"auto_delete_inactive_users" validate:"omitempty"`
+	KeepInactiveUserDays        int    `json:"keep_inactive_user_days" validate:"omitempty"`
+	ClientProfileServerAddress  string `json:"client_profile_server_address" validate:"omitempty"`
+	ClientProfileServerPort     int    `json:"client_profile_server_port" validate:"omitempty"`
+	ClientProfileConnectionName string `json:"client_profile_connection_name" validate:"omitempty"`
 }
 
 type SetupSystemResponse struct {
